fixed overflow

--- a/CSS/breakpoints.css
+++ b/CSS/breakpoints.css
@@ -27,8 +27,9 @@
     }
 
 @media screen and (min-width: 375px){
-    #home{
-      }
+    body{
+        overflow: hidden;
+    }
         .home-container{
         }
     }
